Stopgap image overflow

--- a/less/post.less
+++ b/less/post.less
@@ -32,6 +32,7 @@
 
     &__feature-image {
         max-height: 50vh;
+        overflow: hidden;
 
         &__inner {
             width: 100vw;
